  * Fixed: Fix off-by-one in uriComposeQueryCharsRequired* and ...Ex*
      Reported space requirements were 1 byte bigger than necessary
  * Added: Support for custom memory managers (GitHub #26), see Doxygen output
      New functions:
        uriAddBaseUriExMm[AW]
        uriComposeQueryMallocExMm[AW]
        uriDissectQueryMallocExMm[AW]
        uriFreeQueryListMm[AW]
        uriFreeUriMembersMm[AW]
        uriNormalizeSyntaxExMm[AW]
        uriParseUriExMm[AW]
        uriRemoveBaseUriMm[AW]
      New error codes:
        URI_ERROR_MEMORY_MANAGER_INCOMPLETE
      New types:
        UriMemoryManager
        UriFuncMalloc
        UriFuncCalloc
        UriFuncRealloc
        UriFuncReallocarray
        UriFuncFree
  * Added: Add non-void versions of uriNormalizeSyntaxMaskRequired*
      New functions:
        uriNormalizeSyntaxMaskRequiredEx[AW]
  * Changed: Migrate test suite from CppTest to GoogleTest 1.8.1
  * TODO BUMP SONAME

2018-08-18 -- 0.8.6

  * Fixed: Bad/NULL .hostText.afterLast when parsing certain rather pathologic
      but well-formed URIs with empty host (e.g. "//:%aa@") (GitHub #15)
      Thanks to Kurt Schwehr for the report!
  * Fixed: Fix uriRemoveBaseUri for case where scheme, host name,
      IPvFuture address or path segments of the source address were
      string prefixes of the related counterpart in the base URI.
      Thanks to Yang Yu for the patch! (GitHub #19, #20)
  * Fixed: Make UriStringToUnixFilename and UriStringToWindowsFilename
      support minimal representation a la RFC 8089, e.g. file:/bin/bash
      (compare to file:///bin/bash with three slashes) (GitHub #12, #14)
      Thanks to Zane van Iperen for the report!
  * Fixed: Documentation typos (GitHub #10, #11)
      Thanks to Graham Percival!
  * Improved: Made API docs of uriRemoveBaseUri more clear
      (related to GitHub #19)
  * Soname: 1:22:0

2018-02-07 -- 0.8.5

  * Changed: The uriparser project has moved from SourceForge to GitHub: